# Sentinel

./: .gitignore  README.md  TODO.md  pyproject.toml  sentinel-web.yaml  sentinel_review.md  start-webui.bat
.brain_templates/: map.json.template  memory.md.template  session.md.template
.sentinel/baselines/: demo-v1.json  demo-v2.json  demo-v3.json
.sentinel/runs/: 0095c2ef-f20.json  03fd62a4-a62.json  055bf03c-c19.json  05b76819-077.json  07e547ff-1f9.json  08e4ab12-4b8.json  0a01fd07-715.json  1642615f-65b.json  17cff4ae-47b.json  1d483d62-46c.json  222ffc49-943.json  2e3e1c1d-0ba.json  30525125-49f.json  35d93ad4-96fe-4645-9091-aa55f11feea4.json  38bb1667-6f4.json  3a017487-7245-4fc0-8708-51fdb03bb217.json  3a69d564-7b3.json  3bdf0059-eaa.json  3dd2a3c6-eae.json  425e4a93-da31-49ee-9582-90443fc70098.json  42c99962-146.json  49f0b22c-c5dd-4bfc-8f8d-9f7ae6edd364.json  4ca8769e-1a3.json  52a99b04-efe.json  53d0f580-585.json  5446df61-559.json  566a6263-5d7a-49ad-890e-f9896499a1cd.json  5a98759f-fda.json  61b5c5e7-344.json  6262e147-de7.json  63b53e3b-f36.json  670027ba-f5e.json  6c31688a-9f5.json  6f8528c1-ac8.json  73e74016-0a3.json  7421999b-97f.json  76c44456-a83.json  76f2b03a-c2a.json  779a28aa-b4e.json  78ed0d04-2d12-4563-8eeb-f0798dd92054.json  (+47 more)
common/: __init__.py  __main__.py  config.py  logging.py  models.py  setup_cli.py
docs/: ADAPTERS_GUIDE.md  API_REFERENCE.md  CHAOS_BENCHMARK.md  CHAOS_GUIDE.md  GOVERNANCE_DECISION.md  INTEGRATION_TESTING.md  PROJECT_REVIEW.md  QUICKSTART.md  SENTINEL_WEBUI_PLAN.md  WEBUI_DESIGN.md  api.md
examples/: README.md  agent-frameworks.full.yaml  agent-frameworks.lmstudio.yaml  agent-frameworks.minimal.yaml  agent-frameworks.ollama.yaml  basic_scenario.yaml  chaos_scenario.yaml  e2e-scenario-saved.yaml  example_audit.py  example_model_routing.py  example_pattern_memory.py  example_session.py  langchain_quickstart.py
examples/demo-scenarios/: cascade-db-api-ui.yaml  context-degradation-long.yaml  memory-pressure-evict.yaml  multi-tool-resilience.yaml  network-partition-db.yaml  rate-limit-retry.yaml  refund-agent-timeout.yaml  spec-drift-pressure.yaml
examples/governance/: auditor.none.yaml  auditor.ollama.yaml  auditor.vllm.yaml
governance/: README.md  __init__.py  audit.py  auditor.py  auditor.yaml  claims.py  evidence.py  extract.py  governance.yaml
pattern-memory/: README.md  cli.py  config.py  demo.py  mcp_config.py  models.py  pattern_engine.py  pyproject.toml  server.py  storage.py  wrapper.py
pattern-memory/tests/: test_config.py  test_core.py  test_mcp_config.py  test_mcp_integration.py
scripts/: bump_version.py  generate_demo_data.py
src/sentinel/: README.md  __init__.py  assertions.py  baseline.py  chaos.py  chaos_presets.py  cli.py  env.py  models.py  otel.py  reporting.py  runner.py
tests/: AGENTS.md  conftest.py  test_governance.py
tests/sentinel/: test_adapters_crewai.py  test_adapters_generic.py  test_adapters_langchain.py  test_adapters_openai.py  test_assertions.py  test_assertions_phase6.py  test_chaos.py  test_chaos_advanced.py  test_chaos_phase5.py  test_edge_cases.py  test_env.py  test_env_phase4.py  test_governance_assertions.py  test_integration_langchain.py  (+4 more)
updates/: 2026-07-08.md
(+46 files in other folders)
