[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "Agent Behavioral Testing Platform — tests what agents DO, not just what they SAY"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Adam Sims" },
]
keywords = ["ai", "agent", "testing", "behavioral", "chaos", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core: zero external dependencies. Sentinel works standalone.
dependencies = []

[project.optional-dependencies]
# Framework adapters — only install what you use
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
openai = ["openai>=1.0.0"]
adapters = [
    "langchain-core>=0.3.0",
    "crewai>=0.80.0",
    "openai>=1.0.0",
]

# Governance audit harness
governance = ["pyyaml>=6.0"]

# OpenTelemetry export (optional — core OTelSpan model works without SDK)
otel = ["opentelemetry-sdk>=1.0.0", "opentelemetry-exporter-otlp>=1.0.0"]

# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

# Everything
all = [
    "langchain-core>=0.3.0",
    "crewai>=0.80.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-otlp>=1.0.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
sentinel = "sentinel.cli:cli"
sentinel-run = "sentinel.cli:cli"

[project.urls]
Homepage = "https://github.com/adam85sims/sentinel"
Documentation = "https://github.com/adam85sims/sentinel#readme"
Repository = "https://github.com/adam85sims/sentinel"
Issues = "https://github.com/adam85sims/sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real agent frameworks",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter
