[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern-memory"
version = "0.13.0"
description = "An MCP server that learns behavioral patterns from user corrections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hermes Project" },
]
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pattern-memory = "cli:main"
pattern-memory-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
